# video_filter

./: .gitattributes  CMakeLists.txt  README.md
executable/: CMakeLists.txt
executable/src/: light_trail.cpp
include/video_filter/: CommandLineParser.hpp  LightTrail.hpp  RoiSelect.hpp  frame.hpp  tracker.hpp
include/video_filter/detail/: ProgressBar.hpp  debug.hpp  mask_operations.hpp  stringUtils.hpp
scripts/: debug_build.sh  release_build.sh  run_program.sh
